# ComfyUI-MotionCapture

./: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  download_models.sh  install.py  patch_dpvo.bat  prestartup_script.py  pyproject.toml  requirements.txt
assets/: README.md  example_camera_trajectory.npz  smpl_params_example.npz  smpl_params_tennis.npz
nodes/: __init__.py  bvh_retarget_node.py  bvh_viewer_node.py  comfy-env.toml  compare_smpl_bvh_node.py  fbx_animation_viewer_node.py  fbx_loader_node.py  gvhmr_utils.py  inference_node.py  load_camera_trajectory_node.py  load_model.py  load_smpl_node.py  loader_node.py  lowvram.py  mixamo_loader_node.py  rest_pose_node.py  retarget_node.py  sam3d_inference_node.py  save_smpl_node.py  shared_vit.py  smpl_camera_viewer_node.py  smpl_retarget_node.py  smpl_to_bvh_nocollar.py  smpl_to_bvh_node.py  smpl_to_bvh_tpose.py  smpl_to_mixamo_node.py  utils.py  viewer_node.py
nodes/body_model/: body_model.py  min_lbs.py  smpl_lite.py  smplx_lite.py  smplx_utils.py
nodes/dpvo/: blocks.py  extractor.py  net.py
nodes/gvhmr/: __init__.py  endecoder.py  model.py  postprocess.py
nodes/hmr2/: __init__.py  model.py
nodes/motion_utils/: ccd_ik.py  (+14 more)
scripts/: convert_safetensors.py
web/: fbx_animation_viewer.js  fbx_preview.js
workflows/: GVHMR.json  GVHMR_cameramotion.json  GVHMR_inference.json  GVHMR_inference_cameramotion.json  GVHMR_inference_movingcamera.json  README.md  apply_motion_on_character.json  load_camera_traj.json  smpl_to_bvh_pipeline.json  smpl_to_mixamo_debug.json
(+29 files in other folders)
