[project]
name = "comfyui-motioncapture"
description = "Motion Capture nodes for ComfyUI: SMPL data/retargeting using GVHMR. This node is a very first draft, putting it out there in the hope some blender whizzes can help me figure out retargeting *prayer emoji*"
version = "0.0.4"
license = {file = "LICENSE"}
requires-python = ">=3.10"

# Standard dependencies that can be installed via pip
# CUDA-specific packages (spconv, torch-scatter, torch-cluster) are handled by install.py
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-MotionCapture"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-MotionCapture#readme"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-MotionCapture/issues"

# ComfyUI Registry configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MotionCapture"
Icon = ""
