[project]
name = "comfyui-motioncapture"
description = "Motion Capture nodes for ComfyUI: SMPL data/retargeting using GVHMR"
version = "0.0.7"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-MotionCapture"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MotionCapture"
Icon = ""
